--- a/project_name/templates/hello-world.html
+++ b/project_name/templates/hello-world.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-<h1>Hello, World!</h1>
+<h1 class="font-bold text-2xl">Hello, World!</h1>
+<p>You've been here since <span class="text-green-400" data-timeago datetime="{{ now }}">{{ now }}</span>.</p>
+{% endblock %}
+
+{% block scripts %}
+<script src="{% static "js/hello_world.js" %}" type="module"></script>
 {% endblock %}
