--- a/project_name/templates/hello-world.html
+++ b/project_name/templates/hello-world.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1 class="font-bold text-2xl">Hello, World!</h1>
-<p>You've been here since <span class="text-green-400" data-timeago datetime="{{ now }}">{{ now }}</span>.</p>
+<p>You've loaded this page <span class="text-green-400" data-timeago datetime="{{ now|date:"c" }}">{{ now }}</span>.</p>
 {% endblock %}
 
 {% block scripts %}
