Variable project_name

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project_name</title>
+    <title>{{ project_name }}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
     {% block head %}{% endblock %}
   </head>
